Changelog for Hoogle

5.0.17, released 2018-01-17
    Add lower bounds for time and bytestring
    #234, allow http-conduit-0.15
5.0.16, released 2018-01-03
    #232, allow haskell-src-exts-1.18-1.20
5.0.15, released 2017-12-12
    Allow haskell-src-exts-1.20
5.0.14, released 2017-11-28
    #228, add --datadir for overriding data directory on servers
    #223, don't break on foldl'
    #222, make sure all packages appear in the search
5.0.13, released 2017-07-30
    #219, treat the query "a->b" the same as "a -> b"
    #215, if a specified module/package is missing, give no results
    #220, start on port 8080 by default
    Rely on the fact ghc API is now on Hackage
    #217, fix the mode tag propagating to child links
5.0.12, released 2017-05-06
    #210, expose targetInfo and targetSearchDisplay
5.0.11, released 2017-05-02
    #209, add a defaultDatabaseLocation function
5.0.10, released 2017-04-17
    #205, change how the link URL is computed
    #206, put newer versions of a package first
5.0.9, released 2017-01-16
    #202, add --haddock functionality
5.0.8, released 2016-12-29
    #194, make --local work regardless of code page
5.0.7, released 2016-12-27
    #200, make sure the content-type is set properly
5.0.6, released 2016-11-30
    #196, make --local look for .cabal files as well
    Fix up Frege documentation generation
5.0.5, released 2016-11-24
    #193, support multiple --local flags
    #195, add --home flag to server mode
    Allow haskell-src-exts-1.19
5.0.4, released 2016-09-11
    #184, use file URLs for local docs
    #183, make --local look for .txt files recursively
5.0.3, released 2016-08-28
    #181, use the proper network constraints
    Avoid deprecated Aeson modules
5.0.2, released 2016-07-25
    Move to haskell-src-exts-1.18
5.0.1, released 2016-07-12
    #178, support the --link argument
    #178, add module names to results on the command line
    #177, require containers 0.5 or above
5.0, released 2016-06-24