@@ -1,5 +1,6 @@
 Changelog for Hoogle
 
+    #236, in --local mode replace file:// links in Haddock pages
 5.0.17, released 2018-01-17
     Add lower bounds for time and bytestring
     #234, allow http-conduit-0.15
